--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1388,7 +1388,9 @@ Completion configuration automatically tangled in =./lisp/setup-completion.el=
     :bind (("C-x C-d" . consult-dir)
          :map vertico-map
          ("C-x C-d" . consult-dir)
-         ("C-x C-j" . consult-dir-jump-file)))
+         ("C-x C-j" . consult-dir-jump-file))
+    :config
+    (setq consult-dir-project-list-function #'consult-dir-projectile-dirs))
 #+end_src
 ** Embark
 
