Fix deprecated date/weektree capture templates

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1795,8 +1795,8 @@ will appear as projects.
                  :empty-lines 1)
              ("s" "Someday" entry (file+headline nc/inbox-file "Inbox")
                "* SOMEDAY %? :idea:\n%u" :clock-in t :clock-resume t)
-             ("f" "FishLog" plain (file+datetree+prompt nc/fishing-file)
-              "%[~/notes/templates/fishlog.org]")
+             ("f" "FishLog" plain (file+olp+datetree nc/fishing-file)
+              "%[~/notes/templates/fishlog.org]" :time-prompt t)
              ("F" "Film" entry (file+headline nc/watching-file "Films à voir")
                   "* NEXT %^{Titre}
           %i
@@ -1920,8 +1920,8 @@ I have my own template for creating new projects
 *** WeeklyReview
  #+begin_src emacs-lisp
  (add-to-list 'org-capture-templates
-                  `("w" "WeeklyReview" entry (file+datetree+prompt nc/weekly-review-file)
-            "* Summary of the week :REVIEW:\n%[~/notes/templates/review.org]"))
+                  `("w" "WeeklyReview" entry (file+olp+datetree nc/weekly-review-file)
+            "* Summary of the week :REVIEW:\n%[~/notes/templates/review.org]" :time-prompt t))
  #+end_src
 
 ** Agenda
