--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1190,7 +1190,13 @@ Completion configuration automatically tangled in =./lisp/setup-completion.el=
       ;; (setq vertico-cycle t)
       )
 
-      ;; Optionally use the `orderless' completion style.
+  ;; Persist history over Emacs restarts. Vertico sorts by history position.
+  (use-package savehist
+    :init
+    (savehist-mode))
+
+
+  ;; Optionally use the `orderless' completion style.
   (use-package orderless
     :init
     ;; Configure a custom style dispatcher (see the Consult wiki)
