Change GTD Contexts @commputer->personal

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1770,7 +1770,7 @@ In GTD tags are contexts
                                ("@office" . ?o)
                                ("@home" . ?h)
                                (:endgroup)
-                               ("@computer" . ?c)
+                               ("personal" . ?p)
                                ("@reading" . ?r)
                                ("learning" . ?l)
                                ("emacs" . ?e)
@@ -2001,7 +2001,7 @@ Setting =org-agenda-file-regexp= to include all numeric files (journal files)
                       nil)
                ("g" . "GTD contexts")
                   ("go" "Office" tags-todo "@office")
-                  ("gc" "Computer" tags-todo "@computer")
+                  ("gp" "Personal" tags-todo "personal")
                   ("ge" "Emacs" tags-todo "emacs")
                   ("gl" "Learning" tags-todo "learning")
                   ("gr" "Reading" tags-todo "@reading")
@@ -2015,7 +2015,7 @@ Setting =org-agenda-file-regexp= to include all numeric files (journal files)
                            (org-agenda-sorting-strategy '(priority-down))
                            (org-agenda-overriding-header "Office Projects Tasks")))))
                   ("pp" "My Personal Projects"
-                   ((tags "project+@computer|@computer+LEVEL=2+TODO=\"TODO\""
+                   ((tags "project+personal|personal+LEVEL=2+TODO=\"TODO\""
                           (;; (org-agenda-files (list nc/org-default-projects-file))
                            (org-agenda-prefix-format " %-12c %l%e%l")
                            (org-agenda-sorting-strategy '(priority-down))
