Update Refile Targets

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1925,7 +1925,7 @@ By default all files in GTD and journal folder will be in my agenda, to be searc
 
 #+begin_src emacs-lisp
 ;; My Org agenda-files
-(defvar nc/org-agenda-files (list "~/notes/gtd.org" "~/notes/projects.org" "~/notes/someday.org" "~/notes/personal/calendar.org" "~/notes/journal/"))
+(defvar nc/org-agenda-files (list "~/notes/gtd.org" "~/notes/someday.org" "~/notes/personal/calendar.org" "~/notes/journal/"))
 #+end_src
 
 
@@ -2088,7 +2088,7 @@ Targets include this file and any file contributing to the agenda - up to 2 leve
  #+begin_src emacs-lisp
    (setq org-refile-targets (append '((org-default-notes-file :maxlevel . 2))
                                     '((nc/org-default-tasks-file :level . 1)
-                                      (nc/project-files :regexp . "\\(?:\\(?:Note\\|Task\\)s\\)")
+                                      ;;(nc/org-default-projects-file :regexp . "\\(?:\\(?:Note\\|Task\\)s\\)")
                                       (nc/org-default-someday-file :level . 0)
                                       (nil :maxlevel . 3)))) ;; current file
 
@@ -2538,6 +2538,7 @@ From : https://github.com/tecosaur/emacs-config/blob/master/config.org#translate
   ;; (when is-windows  
   ;;   (add-to-list 'exec-path "C:/ProgramJava/tools/sqlite-tools-win32-x86-3340100"))
 
+
   ;; From https://baty.net/2022/searching-org-roam-files/
   (defun nc/search-roam ()
     "Run consult-ripgrep on the org roam directory"
@@ -2596,11 +2597,20 @@ From : https://github.com/tecosaur/emacs-config/blob/master/config.org#translate
 
   (defun nc/org-roam-refresh-agenda-list ()
     (interactive)
-    (setq org-agenda-files (append nc/org-agenda-files
-          (nc/org-roam-list-notes-by-tag "project"))))
+    (setq org-agenda-files
+          (append nc/org-agenda-files
+                  (nc/org-roam-list-notes-by-tag "project"))))
 
   ;; Build the agenda list the first time for the session
   (nc/org-roam-refresh-agenda-list)
+
+  (defun nc/update-refile-targets (filename)
+    "Update refile targets"
+    (add-to-list 'org-refile-targets `(,filename :regexp . "\\(?:\\(?:Note\\|Task\\)s\\)")))
+
+  ;; Refresh org-refile-targets 
+  (dolist (project-file (nc/org-roam-list-notes-by-tag "project"))
+    (nc/update-refile-targets project-file))
 
   (defun nc/org-roam-project-finalize-hook ()
     "Adds the captured project file to `org-agenda-files' if the
@@ -2613,7 +2623,7 @@ From : https://github.com/tecosaur/emacs-config/blob/master/config.org#translate
       (with-current-buffer (org-capture-get :buffer)
         (prog  
          (add-to-list 'org-agenda-files (buffer-file-name))
-         (add-to-list 'nc/project-files (buffer-file-name))))))
+         (nc/update-refile-targets (buffer-file-name))))))
 
   (defun nc/org-roam-find-project ()
     (interactive)
