Update Treemacs Key Bindings

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1111,6 +1111,7 @@ https://github.com/Alexander-Miller/treemacs
       (treemacs-hide-gitignored-files-mode nil))
     :bind
     (:map global-map
+          ("C-t"   . treemacs)
           ("C-x t 1"   . treemacs-delete-other-windows)
           ("C-x t t"   . treemacs)
           ("C-x t B"   . treemacs-bookmark)
