Fix treemacs-select-window key binding

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1039,9 +1039,6 @@ https://github.com/Alexander-Miller/treemacs
   (use-package treemacs
     :ensure t
     :defer t
-    :init
-    (with-eval-after-load 'winum
-      (define-key winum-keymap (kbd "M-o") #'treemacs-select-window))
     :config
     (progn
       (setq treemacs-collapse-dirs                   (if treemacs-python-executable 3 0)
@@ -1111,7 +1108,8 @@ https://github.com/Alexander-Miller/treemacs
       (treemacs-hide-gitignored-files-mode nil))
     :bind
     (:map global-map
-          ("C-t"   . treemacs)
+          ("C-t"       . treemacs)
+          ("M-o"       . treemacs-select-window)
           ("C-x t 1"   . treemacs-delete-other-windows)
           ("C-x t t"   . treemacs)
           ("C-x t B"   . treemacs-bookmark)
