Fix Org Roam Capture Templates

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -2619,7 +2619,7 @@ From : https://github.com/tecosaur/emacs-config/blob/master/config.org#translate
     ;; Add project file to the agenda list if the capture was confirmed
     (unless org-note-abort
       (with-current-buffer (org-capture-get :buffer)
-        (prog  
+        (progn  
          (add-to-list 'org-agenda-files (buffer-file-name))
          (nc/update-refile-targets (buffer-file-name))))))
 
@@ -2637,7 +2637,7 @@ From : https://github.com/tecosaur/emacs-config/blob/master/config.org#translate
      :templates
      '(("p" "project" plain (file "~/notes/templates/newproject.org")
         :if-new (file+head "projects/%<%Y-%m-%d>-${slug}.org"
-                           "#+title: ${title}\n#+category: %^{CATEGORY}\n#+filetags: :project:")
+                           "#+title: ${title}\n#+category: %^{CATEGORY}\n#+filetags: :project:%^{context|@office|personal}:")
         :unnarrowed t))))
 
   (defun nc/org-roam-capture-task ()
