Update Book Capture Template

--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -1865,7 +1865,7 @@ will appear as projects.
   (add-to-list 'org-capture-templates
                    '("b" "Book"  entry
                      (file+headline nc/reading-file "Inbox")
-                     "* NEXT %^{Title}\n:PROPERTIES:\n:author: %^{Author}\n:name: %^{Title}\n:END:\n\n%i\n\n" :empty-lines 1))
+                     "* NEXT %^{Title} %^g\n:PROPERTIES:\n:author: %^{Author}\n:name: %^{Title}\n:END:\n\n%i\n\n" :empty-lines 1))
 #+end_src
 *** Interruption task
  #+begin_src emacs-lisp
