--- a/emacs/.emacs.d/Readme.org
+++ b/emacs/.emacs.d/Readme.org
@@ -566,7 +566,6 @@ Some Emacs Global Bindings are redefined here.
 
   ;; Tools alt-[0-9]
   (global-set-key (kbd "M-0") #'nc/maximize-or-split-window-vertically)
-  (global-set-key (kbd "M-1") #'vterm-toggle)
   (global-set-key (kbd "M-5") #'magit-log-buffer-file)
 
 #+end_src
@@ -648,35 +647,27 @@ Some Emacs Global Bindings are redefined here.
 #+begin_src emacs-lisp
   (major-mode-hydra-define org-mode nil
     ("GTD"
-     (("d" nc/org-insert-daily-review "Start Daily Review")
-      ("h" nc/insert-daily-heading "Insert Daily Heading"))
+     (("s" nc/org-insert-daily-review "Start Daily Review")
+      ("d" nc/insert-daily-heading "Insert Daily Heading"))
      "Actions"
      (("r" nc/org-refile-subtree-to-file "Refile subtree to file")
       ("A" nc/create-buffer-attachment-directory "Create attachment directory"))
      "Search"
-     (("sn" nc/search-notes "Search Notes"))))
+     (("?" nc/search-notes "Search Notes"))))
 #+end_src
 
 ** My Personal Key Bindings
 My map
 #+begin_src emacs-lisp
-  (defcustom nc-prefix "C-<"
-    "Prefix for all personal keybinds."
-    :type 'string
-    :group 'nc-emacs)
 
   (bind-keys
-     :prefix-map nc-map
-     :prefix-docstring "Prefix for personal key bindings"
-     :prefix nc-prefix
    ;; 2013-03-31: http://stackoverflow.com/questions/3124844/what-are-your-favorite-global-key-bindings-in-emacs
-     (";" . nc/goto-emacs-config)
-     ("SPC" . major-mode-hydra)
-     (":"  . avy-goto-char-timer)
-     ("i" . nc-hydra-insert/body)
-     ("g" . nc-hydra-goto/body)
-     ("t" . nc-hydra-toggle/body)
-     ("w" . nc-hydra-windows/body))
+     ("C-c C-;" . nc/goto-emacs-config)
+     ("C-c C-h" . major-mode-hydra) 
+     ("C-c i" . nc-hydra-insert/body)
+     ("C-c g" . nc-hydra-goto/body)
+     ("C-c t" . nc-hydra-toggle/body)
+     ("C-c w" . nc-hydra-windows/body))
 #+end_src
 
 ** Key Chords
@@ -693,6 +684,7 @@ My map
     (key-chord-define-global "??" 'nc/search-notes) 
     (key-chord-define-global "BB" 'beginning-of-buffer)
     (key-chord-define-global "JJ" 'crux-top-join-line)
+    (key-chord-define-global "MM" 'nc/maximize-or-split-window-vertically)
     (key-chord-define-global "$$" 'end-of-buffer))
 #+end_src
 
@@ -1108,8 +1100,7 @@ https://github.com/Alexander-Miller/treemacs
       (treemacs-hide-gitignored-files-mode nil))
     :bind
     (:map global-map
-          ("C-t"       . treemacs)
-          ("M-o"       . treemacs-select-window)
+          ("C-t"       . treemacs-select-window)
           ("C-x t 1"   . treemacs-delete-other-windows)
           ("C-x t t"   . treemacs)
           ("C-x t B"   . treemacs-bookmark)
@@ -3030,7 +3021,7 @@ Last emacs terminal emulator :  https://github.com/akermu/emacs-libvterm
          (slot . 0)))
 
     :bind
-    ("C-c t" . vterm-toggle)
+    ("C-c s" . vterm-toggle)
     (:map vterm-mode-map
           ("C-<return>" . vterm-toggle-insert-cd)
           ("C-S-n" . vterm-toggle-forward)
